try to fix filter

--- a/views/elements/header.ejs
+++ b/views/elements/header.ejs
@@ -40,10 +40,10 @@
                     <a href="/"><span class="icon-home"></span>  Home</a>                
                 </li>
                 <li class="nav-item <% if (page == 'series') __append('active-item'); %>">
-                    <a href="#"><span class="icon-television"></span>  Series</a>
+                    <a href="#"><span class="icon-series"></span>  Series</a>
                 </li>
                 <li class="nav-item <% if (page == 'movies') __append('active-item'); %>">
-                    <a href="#"><span class="icon-movie"></span>  Movies</a>
+                    <a href="#"><span class="icon-movies"></span>  Movies</a>
                 </li>
                 <li class="nav-item <% if (page == 'anime') __append('active-item'); %>">
                     <a href="#"><span class="icon-anime"></span>  Anime </a>
