--- a/views/seasonPage.ejs
+++ b/views/seasonPage.ejs
@@ -5,7 +5,7 @@
         <img src="<%= prefixe+season.cover_url %>" class=" slider-img" alt="...">
         <div class=" item-content">
             <div class=" item-info item-cover-info">
-                <a href="#"><button class="btn btn-cat btn-<%=  season.type.toLowerCase() %>"><i class="icon-television"></i> <%= season.type %></button></a>
+                <a href="#"><button class="btn btn-cat btn-<%=  season.type.toLowerCase() %>"><i class="icon-<%=  season.type.toLowerCase() %>"></i> <%= season.type %></button></a>
                 <h1 class="cover-title"><%= season.title+' '+season.season_ref %></h1>
             </div>
             <div class=" item-buttons">
@@ -45,7 +45,7 @@
                 <% for(let i=0; i < seasons.length; i++) { %>      
                     <div class="col poster example1">
                         <div class="poster-links">
-                            <a href="#" class="btn-poster btn-<%= seasons[i].type.toLowerCase() %>"><i class="icon-television"></i> <%= seasons[i].type %></a><a class="btn-poster btn-<%= seasons[i].complete %>"><%= seasons[i].complete %></a>
+                            <a href="#" class="btn-poster btn-<%= seasons[i].type.toLowerCase() %>"><i class="icon-<%= seasons[i].type.toLowerCase() %>"></i> <%= seasons[i].type %></a><a class="btn-poster btn-<%= seasons[i].complete %>"><%= seasons[i].complete %></a>
                         </div>
                         <a href="/item/<%= seasons[i].id+'/'+seasons[i].season_ref %>"><div class="poster-content">
                         <div class="poster-info">
@@ -78,7 +78,7 @@
             <% for(let i=0; i < related.length; i++) { %>      
                 <div class="col poster example1">
                     <div class="poster-links">
-                        <a href="#" class="btn-poster btn-<%= related[i].type.toLowerCase() %>"><i class="icon-television"></i> <%= related[i].type %></a><a class="btn-poster btn-<%= related[i].complete %>"><%= related[i].complete %></a>
+                        <a href="#" class="btn-poster btn-<%= related[i].type.toLowerCase() %>"><i class="icon-<%= related[i].type.toLowerCase() %>"></i> <%= related[i].type %></a><a class="btn-poster btn-<%= related[i].complete %>"><%= related[i].complete %></a>
                     </div>
                     <a href="/item/<%= related[i].id %>"><div class="poster-content">
                     <div class="poster-info">
