--- a/public/assets/css/icons/style.css
+++ b/public/assets/css/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?lltal8');
-  src:  url('fonts/icomoon.eot?lltal8#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?lltal8') format('truetype'),
-    url('fonts/icomoon.woff?lltal8') format('woff'),
-    url('fonts/icomoon.svg?lltal8#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ykyeos');
+  src:  url('fonts/icomoon.eot?ykyeos#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ykyeos') format('truetype'),
+    url('fonts/icomoon.woff?ykyeos') format('woff'),
+    url('fonts/icomoon.svg?ykyeos#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -108,7 +108,7 @@
 .icon-monitor:before {
   content: "\e918";
 }
-.icon-movie:before {
+.icon-movies:before {
   content: "\e919";
 }
 .icon-next:before {
@@ -138,24 +138,27 @@
 .icon-search:before {
   content: "\e922";
 }
-.icon-settings:before {
+.icon-series:before {
   content: "\e923";
 }
-.icon-sign-in:before {
+.icon-settings:before {
   content: "\e924";
 }
-.icon-star:before {
+.icon-sign-in:before {
   content: "\e925";
 }
-.icon-television:before {
+.icon-star:before {
   content: "\e926";
 }
-.icon-time:before {
+.icon-television:before {
   content: "\e927";
 }
-.icon-video:before {
+.icon-time:before {
   content: "\e928";
 }
-.icon-warning:before {
+.icon-video:before {
   content: "\e929";
+}
+.icon-warning:before {
+  content: "\e92a";
 }
